--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -8,4 +8,12 @@ editor_options:
   chunk_output_type: console
 ---
 
-Welcome to my research website.
+This is the repository with the objective of learning geneomic selection from Marnin Wolfe
+
+# first header
+
+## second header
+
+### third header
+
+
